fdo#85542: fix DOCX import of overlapping bookmarks

This was broken by 345a3a394e082595924bf219796627f6c00ae2dd.
Kill the static variable and instead have some more state in the
implementation. Still not ideal, but at least fixes the regression.

Change-Id: I562f7d88a1983bd0ec2e01d6bb1e4a53551d0953